--- a/html-css/common-cents-party-band-site/style.css
+++ b/html-css/common-cents-party-band-site/style.css
@@ -42,6 +42,10 @@ img {
   text-decoration: none;
 }
 
+.nav a:hover {
+  text-decoration: underline;
+}
+
 .nav h4 {
   -webkit-margin-before: 0;
   margin-left: 30px;
